--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -5,9 +5,13 @@ on:
       - main
 
 jobs:
-  build:
+  terraform:
     runs-on: ubuntu-latest
+    name: Terraform
+    environment: staging
     steps:
-      - uses: actions/checkout@v3
-      - name: Install terraform CLI
-      - run: terraform --version
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.1.9
+          terraform_wrapper: false
