--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -10,8 +10,10 @@ jobs:
     name: Terraform
     environment: staging
     steps:
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.1.9
-          terraform_wrapper: false
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Terraform init
+        uses: hashicorp/terraform-github-actions/init@v0.4.0
+        run: terraform init
+        shell: bash
