Terraform init phase

--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -8,12 +8,20 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
     name: Terraform
-    environment: staging
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.1.9
+          terraform_wrapper: false
 
-      - name: Terraform init
-        uses: hashicorp/terraform-github-actions/init@v0.4.0
+      - name: Terraform Init
+        id: init
         run: terraform init
+        # env:
+        #   ARM_CLIENT_ID: ${{ secrets.CLIENT_ID }} # This doesn't have to be a secret. Client IDs are not sensitive.
+        #   ARM_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        #   ARM_SUBSCRIPTION_ID: "[Your Subscription ID]"
+        #   ARM_TENANT_ID: "[Your Tenant ID]"
+        # working-directory: ./staging # Use your environment folder
         shell: bash
