Added plan step

--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -49,3 +49,7 @@ jobs:
       - name: Terraform init
         id: init
         run: terraform init
+
+      - name: Terraform plan
+        id: plan
+        run: terraform plan
