--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -46,15 +46,16 @@ jobs:
           terraform_version: 1.1.9
           terraform_wrapper: false
 
+      - name: Terraform init
+        id: init
+        run: terraform init
+
       - name: Infracost installation and authentification
         run: |
           curl -fsSL https://raw.githubusercontent.com/infracost/infracost/master/scripts/install.sh | sh
           infracost --version
           infracost configure set api_key ico-VydNjDztDoYtENuV8MYHiy5De0EYb9zG
-
-      - name: Terraform init
-        id: init
-        run: terraform init
+          infracost breakdown --path .
 
       - name: Terraform plan
         id: plan
