--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -1,34 +1,3 @@
-# name: VPC module build, test and deploy pipeline.
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   terraform:
-#     runs-on: ubuntu-latest
-#     name: Terraform
-#     steps:
-#       - name: Build the Docker image
-#         uses: actions/checkout@v3
-
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v2
-#         with:
-#           terraform_version: 1.1.9
-#           terraform_wrapper: false
-
-#       - name: Terraform Init
-#         id: init
-#         run: terraform init
-#         # env:
-#         #   ARM_CLIENT_ID: ${{ secrets.CLIENT_ID }} # This doesn't have to be a secret. Client IDs are not sensitive.
-#         #   ARM_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-#         #   ARM_SUBSCRIPTION_ID: "[Your Subscription ID]"
-#         #   ARM_TENANT_ID: "[Your Tenant ID]"
-#         # working-directory: ./staging # Use your environment folder
-#         shell: bash
-
 name: VPC module build, test and deploy pipeline.
 on: [push]
 permissions:
@@ -59,8 +28,7 @@ jobs:
   post_build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        name: Infracost installation and authentification
+      - name: Infracost installation and authentification
         run: |
           curl -fsSL https://raw.githubusercontent.com/infracost/infracost/master/scripts/install.sh | sh
           infracost --version
