--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -21,12 +21,14 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: init
     steps:
       - name: Run module test
         uses: actions/checkout@v3
 
   post_build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Infracost installation and authentification
         run: |
