--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -27,7 +27,7 @@ jobs:
 
   terraform_test:
     runs-on: ubuntu-latest
-    needs: init
+    needs: terraform_init
     steps:
       - name: Run module test
         uses: actions/download-artifact@v3
@@ -39,13 +39,21 @@ jobs:
 
   terraform_plan:
     runs-on: ubuntu-latest
-    needs: test
+    needs: terraform_test
     steps:
-      - name: Terraform pan
+      - name: Terraform plan
+        uses: actions/download-artifact@v3
 
-  post_build:
+  terraform_apply:
     runs-on: ubuntu-latest
-    needs: test
+    needs: terraform_plan
+    steps:
+      - name: Terraform plan
+        uses: actions/download-artifact@v3
+
+  terraform_post_build:
+    runs-on: ubuntu-latest
+    needs: terraform_apply
     steps:
       - name: Download module artifacts from previous jobs
         uses: actions/download-artifact@v3
