--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -45,7 +45,7 @@ jobs:
 
   terraform_apply:
     runs-on: ubuntu-latest
-    needs: terraform_plan
+    needs: terraform_test
     steps:
       - name: Terraform plan
         uses: actions/download-artifact@v3
