changed retention days to 1

--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           name: module
           path: ./*
+          retention-days: 1
 
   terraform_plan:
     runs-on: ubuntu-latest
