--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -29,6 +29,9 @@ jobs:
   terraform_plan:
     runs-on: ubuntu-latest
     needs: terraform_init
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Terraform plan
         uses: actions/download-artifact@v3
