--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -29,6 +29,7 @@ jobs:
   terraform_plan:
     runs-on: ubuntu-latest
     needs: terraform_init
+
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -37,6 +38,7 @@ jobs:
         uses: actions/download-artifact@v3
 
       - name: Terraform plan
+        working-directory: /home/runner/work/vpc/vpc/module
         run: terraform plan
 
   terraform_test:
