--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -39,7 +39,10 @@ jobs:
 
       - name: Terraform plan
         working-directory: /home/runner/work/vpc/vpc/module
-        run: terraform plan
+        run: |
+          chmod +x .terraform/providers/registry.terraform.io/hashicorp/local/2.4.0/linux_amd64/terraform-provider-local_v2.4.0_x5
+          chmod +x .terraform/providers/registry.terraform.io/hashicorp/aws/5.7.0/linux_amd64/terraform-provider-aws_v5.7.0_x5
+          terraform plan
 
   terraform_test:
     runs-on: ubuntu-latest
