--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -57,6 +57,9 @@ jobs:
   terraform_apply:
     runs-on: ubuntu-latest
     needs: terraform_test
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Terraform artifacts from terraform_plan
         uses: actions/download-artifact@v3
