--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -85,3 +85,19 @@ jobs:
           infracost --version
           infracost configure set api_key ${{ secrets.INFRACOST_API_KEY }}
           infracost breakdown --path .
+
+  terraform_destroy:
+    runs-on: ubuntu-latest
+    needs: terraform_cost
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    steps:
+      - name: Terraform artifacts from terraform_plan
+        uses: actions/download-artifact@v3
+
+      - name: Terraform apply
+        working-directory: /home/runner/work/vpc/vpc/module
+        run: |
+          chmod +x .terraform/providers/registry.terraform.io/hashicorp/aws/5.7.0/linux_amd64/terraform-provider-aws_v5.7.0_x5
+          terraform destroy --auto-approve
