--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -43,6 +43,22 @@ jobs:
           chmod +x .terraform/providers/registry.terraform.io/hashicorp/aws/5.7.0/linux_amd64/terraform-provider-aws_v5.7.0_x5
           terraform plan
 
+  terraform_cost:
+    runs-on: ubuntu-latest
+    needs: terraform_init
+    steps:
+      - name: Download module artifacts from previous jobs
+        uses: actions/download-artifact@v3
+        with:
+          name: module
+
+      - name: Infracost installation and authentification
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/infracost/infracost/master/scripts/install.sh | sh
+          infracost --version
+          infracost configure set api_key ${{ secrets.INFRACOST_API_KEY }}
+          infracost breakdown --path .
+
   terraform_test:
     runs-on: ubuntu-latest
     needs: terraform_plan
@@ -69,22 +85,6 @@ jobs:
         run: |
           chmod +x .terraform/providers/registry.terraform.io/hashicorp/aws/5.7.0/linux_amd64/terraform-provider-aws_v5.7.0_x5
           terraform apply --auto-approve
-
-  terraform_cost:
-    runs-on: ubuntu-latest
-    needs: terraform_apply
-    steps:
-      - name: Download module artifacts from previous jobs
-        uses: actions/download-artifact@v3
-        with:
-          name: module
-
-      - name: Infracost installation and authentification
-        run: |
-          curl -fsSL https://raw.githubusercontent.com/infracost/infracost/master/scripts/install.sh | sh
-          infracost --version
-          infracost configure set api_key ${{ secrets.INFRACOST_API_KEY }}
-          infracost breakdown --path .
 
   terraform_destroy:
     runs-on: ubuntu-latest
