--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -88,7 +88,7 @@ jobs:
 
   terraform_destroy:
     runs-on: ubuntu-latest
-    needs: terraform_cost
+    needs: terraform_apply
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
