--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -70,6 +70,13 @@ jobs:
       - name: Pending....
         run: echo "Required knowledge of GoLand and Terratest."
 
+      - name: Save script artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: module
+          path: /home/runner/work/vpc/vpc/module/*
+          retention-days: 1
+
   terraform_apply:
     runs-on: ubuntu-latest
     needs: terraform_test
@@ -86,6 +93,13 @@ jobs:
           chmod +x .terraform/providers/registry.terraform.io/hashicorp/aws/5.7.0/linux_amd64/terraform-provider-aws_v5.7.0_x5
           terraform apply --auto-approve
 
+      - name: Save script artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: module
+          path: /home/runner/work/vpc/vpc/module/*
+          retention-days: 1
+
   terraform_destroy:
     runs-on: ubuntu-latest
     needs: terraform_apply
@@ -101,3 +115,15 @@ jobs:
         run: |
           chmod +x .terraform/providers/registry.terraform.io/hashicorp/aws/5.7.0/linux_amd64/terraform-provider-aws_v5.7.0_x5
           terraform destroy --auto-approve
+
+  terraform_versioninig:
+    runs-on: ubuntu-latest
+    needs: terraform_destroy
+    steps:
+      - name: Download module artifacts from previous jobs
+        uses: actions/download-artifact@v3
+        with:
+          name: module
+
+      - name: Infracost installation and authentification
+        run: git --version
