--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -41,7 +41,7 @@ jobs:
         working-directory: /home/runner/work/vpc/vpc/module
         run: |
           chmod +x .terraform/providers/registry.terraform.io/hashicorp/aws/5.7.0/linux_amd64/terraform-provider-aws_v5.7.0_x5
-          terraform plan
+          terraform plan -var-file="values.tfvars"
 
   terraform_cost:
     runs-on: ubuntu-latest
@@ -91,7 +91,7 @@ jobs:
         working-directory: /home/runner/work/vpc/vpc/module
         run: |
           chmod +x .terraform/providers/registry.terraform.io/hashicorp/aws/5.7.0/linux_amd64/terraform-provider-aws_v5.7.0_x5
-          terraform apply --auto-approve
+          terraform apply --auto-approve -var-file="values.tfvars"
 
       - name: Save script artifacts
         uses: actions/upload-artifact@v3
