--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           terraform_version: 1.1.9
           terraform_wrapper: false
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform init
         id: init
