--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -136,7 +136,7 @@ jobs:
         working-directory: /home/runner/work/vpc/vpc/module
         run: |
           chmod +x .terraform/providers/registry.terraform.io/hashicorp/aws/5.7.0/linux_amd64/terraform-provider-aws_v5.7.0_x5
-          terraform destroy --auto-approve
+          terraform destroy --auto-approve -var-file="values.tfvars"
 
   terraform_versioninig:
     runs-on: ubuntu-latest
